2009-07-11  Brian Gough  <bjg@network-theory.co.uk>

	* simplex2.c (nmsimplex_set_rand): provide alternative
	initialisation which randomizes the initial simplex

2009-07-09  Brian Gough  <bjg@network-theory.co.uk>

	* fminimizer.c (gsl_multimin_fminimizer_free): handle NULL
	argument in free

	* fdfminimizer.c (gsl_multimin_fdfminimizer_free): handle NULL
	argument in free

2008-11-29  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_f): extended fminimizer test to allow type to be
	passed in as a parameter

	* simplex2.c: use BLAS, keep track of center in state to avoid
	unnecessary computation, compute size as RMS value to allow linear
	update.

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

2008-05-06  Brian Gough  <bjg@network-theory.co.uk>

	* simplex.c (nmsimplex_iterate): fix search for second highest
	point

2007-07-30  Brian Gough  <bjg@network-theory.co.uk>

	* history.c: removed (unused file)

2007-02-20  Brian Gough  <bjg@network-theory.co.uk>

	* vector_bfgs2.c (vector_bfgs2_iterate): use positive step size

2007-02-17  Brian Gough  <bjg@network-theory.co.uk>

	* linear_minimize.c (minimize): return GSL_ENOPROG for roundoff

2007-02-14  Brian Gough  <bjg@network-theory.co.uk>

	* linear_minimize.c: made all functions static

	* linear_wrapper.c: made all functions static

2007-02-08  Brian Gough  <bjg@network-theory.co.uk>

	* linear_wrapper.c: convert multidimensional function to
	one-dimensional for line minimisation

	* linear_minimize.c: one-dimensional minimisation from Fletcher

	* vector_bfgs2.c: added Fletcher's implementation

2006-02-18  Brian Gough  <bjg@network-theory.co.uk>

	* vector_bfgs.c (vector_bfgs_iterate): avoid division by zero if
	dxdg == 0

2003-07-24  Brian Gough  <bjg@network-theory.co.uk>

	* simplex.c (nmsimplex_set): changed index variable i from int to
	size_t

2003-04-17  Brian Gough  <bjg@network-theory.co.uk>
