@@ -1,3 +1,7 @@
+2009-08-05  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test.c (main): added a testcase for the spring function
+
 2009-07-11  Brian Gough  <bjg@network-theory.co.uk>
 
 	* simplex2.c (nmsimplex_set_rand): provide alternative
